Changelog
=========

3.1.1 (unreleased)
------------------

- Nothing changed yet.


3.1.0 (2017-12-21)
------------------

- Move resources to a separate bundle
  [cekk]
- Improve IE11 compatibility
  [cekk]
- Improve documentation
  [cekk]


3.0.1 (2017-09-18)
------------------

- Fix query generation in sitesearch.js. Now doesn't include ajax_load in the url
  [cekk]


3.0.0 (2017-09-13)
------------------

- more like this
  [mamico]
- Plone 5 compatibility. Drop Plone 4. Use `plone4` branch.
  [cekk]

2.4.3 (2015-12-02)
------------------

- Fix tests
  [mamico]

- Plone 4.3 compatibility
  [cekk]


2.4.2 (2015-01-19)
------------------

- Fix controlpanel icon [cekk]


2.4.1 (2014-12-09)
------------------

- If search term string changes (searchableText) and the form is submitted,
  reset the all query and start with a new one
  [cekk]


2.4.0 (2014-11-24)
------------------

- Add support to collective.solr [cekk]
- Add configuration to limit word length and number of words in SearchableText
  [cekk]
- Rewrite html for search results [cekk]

2.3.3 (2014-02-20)
------------------

- Fixed search results structure [cekk]


2.3.2 (2014-01-13)
------------------

- Fixed timezone handling [cekk]


2.3.1 (2013-12-06)
------------------

- fixed tabs order results [cekk]
- fixed bug in Plone timezones handling for start and end dates [cekk]


2.3.0 (2013-07-08)
------------------

- refactored view to support plone.app.search [cekk]
- moved configuration from site_properties to registry [cekk]
- added tests [cekk]
- customized "skip_links" viewlet for search view [cekk]

2.2.1 (2012-10-12)
------------------

- fixed indexes column population [cekk]


2.2.0 (2012-10-08)
------------------

- refactoring for Plone 4: now the template is removed and replaced by a view [cekk]


2.1.1 (2012-10-04)
------------------

- fixed update step [cekk]
- fixed first tab selection [cekk]


2.1.0 (2012-10-04)
------------------
