@@ -4,7 +4,9 @@ Changelog
 3.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix solr support: now if solr is installed but disabled in the control panel,
+  all searches doesn't pass through it
+  [cekk]
 
 
 3.1.0 (2017-12-21)
